# beachhack-template

./: .env.example  .gitignore  GIT_WORKFLOW.md  README.md  final_recommendation.json  findings.json  interaction_logs.json  jest.config.js  machine_explainer.py  package-lock.json  package.json  proxy.ts  requirements.txt  run_full_pipeline.py  tsconfig.json  zerohour
Sensor data/: Feature_Extraction.ipynb  simulated_assets.csv
app/: globals.css  layout.tsx  page.tsx
backend/: encoder.py  federatedMCP.py  federatedServer.py  main.py  persistence_detector.py  pyproject.toml  requestly_attack_injector.py  requirements.txt
backend/app/models/: schemas.py
client-toolkit/: federatedClient.py  install-monitor.sh  install.sh  main.py  pyproject.toml
components/: LetterGlitch.tsx  app-sidebar.tsx  nav-main.tsx  nav-user.tsx  section-cards.tsx  sendCall.tsx  site-header.tsx
data-n-sensor/: data_generated.ipynb  data_generated.py  feature_extraction.py  simulated_assets.csv
db/: relations.ts  schema.ts
docs/: ANALYSIS_LOGIC.md  HOW_IT_WORKS.md  analysis_logic.md  architecture.md  contributing.md  execution_plan.md  faq.md  glossary.md  index.html  index.md  installation.md  limitations.md  overview.md  roadmap.md  usage.md
drizzle/: schema.ts
experimentation/: rag.ipynb
extension/: README.md  package-lock.json  package.json  tsconfig.json
frontend/: README.md  package-lock.json  package.json
helpers/: endpoint.bash  extract_pdf.py
integration/: run_live_simulation.py  simulate_from_features.py
knowledge_base/: knowledgebase.json  maintenance_chunks.json  (+2 more)
(+111 files in other folders)
