[project]
name = "backend"
version = "0.1.0"
description = "System Telemetry API Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "supabase>=2.3.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "starlette>=0.36.0",
    "numpy>=1.26.0",
]
